Normalize CSS not required.
The normalize.css is included within the foundation CSS, removed from
base template.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,8 +7,7 @@
 
         {% block framework %}{% endblock %}
 
-        {% stylesheets '@AppBundle/Resources/public/css/normalize.css'
-                       '@AppBundle/Resources/public/css/foundation.css' %}
+        {% stylesheets '@AppBundle/Resources/public/css/foundation.css' %}
             <link rel='stylesheet' href="{{ asset_url }}" />
         {% endstylesheets %}
         {% block stylesheets %}{% endblock %}
