--- a/app/Resources/views/tutorial/room-host.html.twig
+++ b/app/Resources/views/tutorial/room-host.html.twig
@@ -8,8 +8,8 @@
 {% endblock %}
 
 {% block body %}
-    <div id="react-app"></div>
-    <div id="whiteboard-app" class="row"></div>
+    <div id="media-app"></div>
+    <div id="whiteboard-app"></div>
 
     <article>
         {% javascripts '@AppBundle/Resources/public/js/tutorial/MediaContainer.js'
@@ -41,9 +41,6 @@
         var whitCont;
         var peerHandler;
 
-        var medCont = ReactDOM.render(React.createElement(MediaContainer, null), document.getElementById('react-app'));
-        var whitCont = ReactDOM.render(React.createElement(Whiteboard, null), document.getElementById('whiteboard-app'));
-
         if (navigator.mediaDevices.getUserMedia)
         {
             var p = navigator.mediaDevices.getUserMedia({ audio: true, video: true });
@@ -52,9 +49,9 @@
             {
                 localStream = mediaStream;
 
-                mediaSocket = io('http://40.127.76.25:9001/media');
+                mediaSocket = io('http://40.127.67.237:9001/media');
                 initMedia();
-                boardSocket = io('http://40.127.76.25:9001/board');
+                boardSocket = io('http://40.127.67.237:9001/board');
                 initBoard();
             });
 
@@ -66,11 +63,12 @@
         }
         function initBoard()
         {
-            boardSocket.on('READY', function()
+            boardSocket.on('READY', function(userId)
             {
                 boardSocket.on('CONNOK', function()
                 {
-                    whitCont = ReactDOM.render(React.createElement(Whiteboard, null), document.getElementById('whiteboard-app'));
+                    ReactDOM.unmountComponentAtNode(document.getElementById('whiteboard-app'));
+                    whitCont = ReactDOM.render(React.createElement(Whiteboard, {userId: userId, isHost: true}), document.getElementById('whiteboard-app'));
                     whitCont.setSocket(boardSocket);
                 });
 
@@ -83,7 +81,7 @@
             mediaSocket.on('READY', function()
             {
                 peerHandler = new PeerHandler("{{roomToken}}", {}, mediaSocket);
-                medCont = ReactDOM.render(React.createElement(MediaContainer, null), document.getElementById('react-app'));
+                medCont = ReactDOM.render(React.createElement(MediaContainer, null), document.getElementById('media-app'));
                 userData[0] = {userId: 0, username: 'Me', stream: localStream};
                 medCont.updateList(userData);
 
