--- a/app/Resources/views/site_frame.html.twig
+++ b/app/Resources/views/site_frame.html.twig
@@ -1,6 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block framework %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+    <script src="https://fb.me/react-15.1.0.js"></script>
+    <script src="https://fb.me/react-dom-15.1.0.js"></script>
+{% endblock %}
+
+{% block javascripts %}
+    {% javascripts '@AppBundle/Resources/public/js/TopBar.js'
+                   '@AppBundle/Resources/public/js/SideBar.js' %}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
+    <script>
+
+        var siteHeader;
+        var sideBarEl;
+
+        siteHeader = ReactDOM.render(React.createElement(TopBar, null), document.getElementById('site-header'));
+        sideBarEl = ReactDOM.render(React.createElement(SideBar, null), document.getElementById('offCanvasLeft'));
+    </script>
 {% endblock %}
