--- a/app/Resources/views/tutorial/room.html.twig
+++ b/app/Resources/views/tutorial/room.html.twig
@@ -8,8 +8,11 @@
 {% endblock %}
 
 {% block body %}
-    <div id="media-app"></div>
-    <div id="whiteboard-app"></div>
+    {{ parent() }}
+    <div style="display:table; width: 100%; height: 100%;">
+        <div id="media-app"></div>
+        <div id="whiteboard-app"></div>
+    </div>
 
     <article>
         {% javascripts '@AppBundle/Resources/public/js/tutorial/MediaContainer.js'
@@ -21,7 +24,7 @@
 {% endblock %}
 
 {% block javascripts %}
-
+    {{ parent() }}
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
     {% javascripts '@AppBundle/Resources/public/js/tutorial/EventEmitter.js'
@@ -40,6 +43,130 @@
         var medCont;
         var whitCont;
         var peerHandler;
+        var localAudio;
+        var localVideo;
+
+        var constraintsToChrome_ = function(c)
+        {
+            if (typeof c !== 'object' || c.mandatory || c.optional)
+            {
+                return c;
+            }
+            var cc = {};
+            Object.keys(c).forEach(function(key)
+            {
+                if (key === 'require' || key === 'advanced' || key === 'mediaSource')
+                {
+                    return;
+                }
+                var r = (typeof c[key] === 'object') ? c[key] : {ideal: c[key]};
+                if (r.exact !== undefined && typeof r.exact === 'number')
+                {
+                    r.min = r.max = r.exact;
+                }
+                var oldname_ = function(prefix, name)
+                {
+                    if (prefix)
+                    {
+                        return prefix + name.charAt(0).toUpperCase() + name.slice(1);
+                    }
+                    return (name === 'deviceId') ? 'sourceId' : name;
+                };
+                if (r.ideal !== undefined)
+                {
+                    cc.optional = cc.optional || [];
+                    var oc = {};
+                    if (typeof r.ideal === 'number')
+                    {
+                        oc[oldname_('min', key)] = r.ideal;
+                        cc.optional.push(oc);
+                        oc = {};
+                        oc[oldname_('max', key)] = r.ideal;
+                        cc.optional.push(oc);
+                    }
+                    else
+                    {
+                        oc[oldname_('', key)] = r.ideal;
+                        cc.optional.push(oc);
+                    }
+                }
+                if (r.exact !== undefined && typeof r.exact !== 'number')
+                {
+                    cc.mandatory = cc.mandatory || {};
+                    cc.mandatory[oldname_('', key)] = r.exact;
+                }
+                else
+                {
+                    ['min', 'max'].forEach(function(mix)
+                    {
+                        if (r[mix] !== undefined)
+                        {
+                            cc.mandatory = cc.mandatory || {};
+                            cc.mandatory[oldname_(mix, key)] = r[mix];
+                        }
+                    });
+                }
+            });
+            if (c.advanced)
+            {
+                cc.optional = (cc.optional || []).concat(c.advanced);
+            }
+            return cc;
+        };
+
+        var getUserMedia_ = function(constraints, onSuccess, onError)
+        {
+            constraints = JSON.parse(JSON.stringify(constraints));
+            if (constraints.audio)
+            {
+                constraints.audio = constraintsToChrome_(constraints.audio);
+            }
+            if (constraints.video)
+            {
+                constraints.video = constraintsToChrome_(constraints.video);
+            }
+            return navigator.webkitGetUserMedia(constraints, onSuccess, onError);
+        };
+        navigator.getUserMedia = getUserMedia_;
+
+        // Returns the result of getUserMedia as a Promise.
+        var getUserMediaPromise_ = function(constraints)
+        {
+            return new Promise(function(resolve, reject)
+            {
+                navigator.getUserMedia(constraints, resolve, reject);
+            });
+        };
+
+        if (!navigator.mediaDevices)
+        {
+            navigator.mediaDevices =
+            {
+                getUserMedia: getUserMediaPromise_,
+                enumerateDevices: function()
+                {
+                    return new Promise(function(resolve)
+                    {
+                        var kinds = {audio: 'audioinput', video: 'videoinput'};
+                        return MediaStreamTrack.getSources(function(devices)
+                        {
+                            resolve(devices.map(function(device)
+                            {
+                                return {label: device.label, kind: kinds[device.kind], deviceId: device.id, groupId: ''};
+                            }));
+                        });
+                    });
+                }
+            };
+        }
+
+        if (!navigator.mediaDevices.getUserMedia)
+        {
+            navigator.mediaDevices.getUserMedia = function(constraints)
+            {
+                return getUserMediaPromise_(constraints);
+            };
+        }
 
         if (navigator.mediaDevices.getUserMedia)
         {
@@ -49,9 +176,9 @@
             {
                 localStream = mediaStream;
 
-                mediaSocket = io('http://40.127.67.237:9001/media');
+                mediaSocket = io("{{serverToken}}" + ':9001/media');
                 initMedia();
-                boardSocket = io('http://40.127.67.237:9001/board');
+                boardSocket = io("{{serverToken}}" + ':9001/board');
                 initBoard();
             });
             p.catch(function(err) { console.log(err.name); });
@@ -65,16 +192,13 @@
         {
             boardSocket.on('READY', function(userId)
             {
+                whitCont = ReactDOM.render(React.createElement(Whiteboard, {userId: userId, isHost: false}), document.getElementById('whiteboard-app'));
                 console.log('Received ready and emitted join room.');
                 boardSocket.on('CONNOK', function()
                 {
-
+                    whitCont.setSocket(boardSocket);
 
                 });
-
-                ReactDOM.unmountComponentAtNode(document.getElementById('whiteboard-app'));
-                whitCont = ReactDOM.render(React.createElement(Whiteboard, {userId: userId}), document.getElementById('whiteboard-app'));
-                whitCont.setSocket(boardSocket);
 
                 boardSocket.emit('JOIN-ROOM', "{{roomToken}}");
             });
@@ -82,49 +206,13 @@
 
         function initMedia()
         {
-            mediaSocket.on('READY', function()
+            mediaSocket.on('READY', function(userId)
             {
                 peerHandler = new PeerHandler("{{roomToken}}", {}, mediaSocket);
-                medCont = ReactDOM.render(React.createElement(MediaContainer, null), document.getElementById('media-app'));
-                userData[0] = {userId: 0, username: 'Me', stream: localStream};
-                medCont.updateList(userData);
+                medCont = ReactDOM.render(React.createElement(MediaContainer, {isHost: false}), document.getElementById('media-app'));
 
-
-                peerHandler.on('error', function(err)
-                {
-
-                });
-
-                peerHandler.on('disconnected', function()
-                {
-
-                });
-
-                peerHandler.on('close', function()
-                {
-
-                });
-
-                peerHandler.on('join', function(userId, username)
-                {
-                    userData[userId] = {userId: userId, username: username};
-                });
-
-                peerHandler.on('leave', function(userId)
-                {
-
-                });
-
-                peerHandler.on('call', function(userId)
-                {
-                    peerHandler.answer(userId, localStream);
-                });
-
-                peerHandler.on('stream', function(userId, remoteStream)
-                {
-                    userData[userId].stream = remoteStream;
-                    medCont.updateList(userData);
-                });
+                medCont.setStream(localStream);
+                medCont.setHandler(peerHandler, userId);
             });
         }
     </script>
