--- a/app/Resources/views/tutorial/room.html.twig
+++ b/app/Resources/views/tutorial/room.html.twig
@@ -16,7 +16,8 @@
 
     <article>
         {% javascripts '@AppBundle/Resources/public/js/tutorial/MediaContainer.js'
-                       '@AppBundle/Resources/public/js/tutorial/Whiteboard.js'
+                       '@AppBundle/Resources/public/js/tutorial/WhiteBoardController.js'
+                       '@AppBundle/Resources/public/js/tutorial/WhiteBoardView.js'
                        '@AppBundle/Resources/public/js/tutorial/fitcurves.js' %}
             <script src="{{ asset_url }}"></script>
         {% endjavascripts %}
@@ -192,11 +193,13 @@
         {
             boardSocket.on('READY', function(userId)
             {
-                whitCont = ReactDOM.render(React.createElement(Whiteboard, {userId: userId, isHost: false}), document.getElementById('whiteboard-app'));
+                whiteBoardController = new WhiteBoardController(false, userId);
+                whiteBoardView = ReactDOM.render(React.createElement(WhiteBoardView, {controller: whiteBoardController}), document.getElementById('whiteboard-app'));
+                whiteBoardController.setView(whiteBoardView);
                 console.log('Received ready and emitted join room.');
                 boardSocket.on('CONNOK', function()
                 {
-                    whitCont.setSocket(boardSocket);
+                    whiteBoardController.setSocket(boardSocket);
 
                 });
 
@@ -216,5 +219,9 @@
             });
         }
     </script>
+{% endblock %}
+
+{% block tests %}
+    {{ parent() }}
 
 {% endblock %}
