--- a/app/Resources/css/tutorial/room.css
+++ b/app/Resources/css/tutorial/room.css
@@ -77,6 +77,7 @@
     margin-bottom: 0px;
     padding: 0px 0px 0px 0px;
     box-sizing: border-box;
+    pointer-events: none;
 }
 
 .colour-button
@@ -114,6 +115,7 @@
 {
     border: 2px solid white;
 }
+
 .whiteboard-controlgroup
 {
     margin-bottom: 16px;
@@ -139,4 +141,29 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.spinner
+{
+  animation: spin 1.4s infinite linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.alert-message
+{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    margin-top: -100px;
+    width: 90%;
+    height: 200px;
+    z-index: 10;
 }
